fix contact background overlapping navbar

--- a/components/Navbar.module.css
+++ b/components/Navbar.module.css
@@ -9,7 +9,7 @@
     font-size: 20px;
     font-weight: 500;
     line-height: 24px;
-    box-shadow: 0px 0px 8px rgba(0,0,0,.6);
+    box-shadow: 0px 0px 5px rgba(0,0,0,.2);
     /* background-color: #F0F0F0; */
     /* border-bottom: 1px solid #e5e5e5; */
 }
